# n-body-rust

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
shaders/: Cargo.toml
shaders/src/: lib.rs
space/: Cargo.toml  build.rs
space/benches/: barnes_hut.rs  perf.rs
space/src/: batch_request.rs  camera.rs  circle_pipeline.rs  constants.rs  event_loop.rs  lib.rs  main.rs  objects.rs  parameters.rs  pipeline.rs  presets.rs  render.rs  sim.rs  surface.rs  ui.rs
space/src/sim/: direct.rs  mod.rs
space/src/sim/barnes_hut/: mod.rs  tree.rs
space/src/ui/: info.rs
