[package]
name = "space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
futures = { version = "0.3.29", features = ["std", "executor"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"
wgpu = { version = "0.18.0", features = ["spirv"] }
winit = { version = "0.29.3", features = ["rwh_05"] }

[build-dependencies]
spirv-builder = "0.9"

