[package]
name = "space"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints]
workspace = true

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
eframe = { version = "0.32.0", features = ["wgpu"] }
egui-wgpu = { version = "0.32.0" }
env_logger = "0.11.8"
futures = { version = "0.3.29", features = ["std", "executor"] }
pollster = "0.3.0"
rand = "0.9.2"
rayon = "1.8.0"
wgpu = { version = "25.0.0", features = ["spirv"] }
winit = { version = "0.30.11", features = ["rwh_05"] }

[build-dependencies]
# spirv-builder = "0.9"
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "8ee9f2f99788134a9c0912238add509539742596" }

